==> aws/amazon-freertos/vendors/st/STM32_BlueNRG1/STM32L4xx_HAL_BlueNRG1_Drivers/src/SDK_EVAL_Spi.c <==
#include "clock.h"
#include "gp_timer.h"
#include "stm32l4xx_hal_bluenrg1_spi.h"
#include "SDK_EVAL_Spi.h"
#define HEADER_SIZE 5
#define MAX_BUFFER_SIZE 255
#define TIMEOUT_DURATION 15

int8_t SdkEvalSpiInit(SdkEvalSpiMode xSpiMode) {
	int8_t retValue;
	GPIO_InitTypeDef GPIO_InitStruct;

	/* Configure SPI initialization parameters depending on the selected
	 platform: BlueNRG EVal Kits or User Defined platforms */
	retValue = SPI_Configure_Platform();
	if (retValue == -1)
		/* BlueNRG Development Kit platfrom is not supported */
		return (retValue);

	/* SCLK */
	GPIO_InitStruct.Pin = BNRG_SPI_SCLK_PIN;
	GPIO_InitStruct.Mode = BNRG_SPI_SCLK_MODE;
	GPIO_InitStruct.Pull = BNRG_SPI_SCLK_PULL;
	GPIO_InitStruct.Speed = BNRG_SPI_SCLK_SPEED;
	GPIO_InitStruct.Alternate = BNRG_SPI_SCLK_ALTERNATE;
	HAL_GPIO_Init(BNRG_SPI_SCLK_PORT, &GPIO_InitStruct);

	/* MISO */
	GPIO_InitStruct.Pin = BNRG_SPI_MISO_PIN;
	GPIO_InitStruct.Mode = BNRG_SPI_MISO_MODE;
	GPIO_InitStruct.Pull = BNRG_SPI_MISO_PULL;
	GPIO_InitStruct.Speed = BNRG_SPI_MISO_SPEED;
	GPIO_InitStruct.Alternate = BNRG_SPI_MISO_ALTERNATE;
	HAL_GPIO_Init(BNRG_SPI_MISO_PORT, &GPIO_InitStruct);

	/* MOSI */
	GPIO_InitStruct.Pin = BNRG_SPI_MOSI_PIN;
	GPIO_InitStruct.Mode = BNRG_SPI_MOSI_MODE;
	GPIO_InitStruct.Pull = BNRG_SPI_MOSI_PULL;
	GPIO_InitStruct.Speed = BNRG_SPI_MOSI_SPEED;
	GPIO_InitStruct.Alternate = BNRG_SPI_MOSI_ALTERNATE;
	HAL_GPIO_Init(BNRG_SPI_MOSI_PORT, &GPIO_InitStruct);

	/* NSS/CSN/CS */
	GPIO_InitStruct.Pin = BNRG_SPI_CS_PIN;
	GPIO_InitStruct.Mode = BNRG_SPI_CS_MODE;
	GPIO_InitStruct.Pull = BNRG_SPI_CS_PULL;
	GPIO_InitStruct.Speed = BNRG_SPI_CS_SPEED;
	GPIO_InitStruct.Alternate = BNRG_SPI_CS_ALTERNATE;
	HAL_GPIO_Init(BNRG_SPI_CS_PORT, &GPIO_InitStruct);
	HAL_GPIO_WritePin(BNRG_SPI_CS_PORT, BNRG_SPI_CS_PIN, GPIO_PIN_SET);

	/* IRQ -- INPUT */
	GPIO_InitStruct.Pin = BNRG_SPI_IRQ_PIN;
	GPIO_InitStruct.Mode = BNRG_SPI_IRQ_MODE;
	GPIO_InitStruct.Pull = BNRG_SPI_IRQ_PULL;
	GPIO_InitStruct.Speed = BNRG_SPI_IRQ_SPEED;
	GPIO_InitStruct.Alternate = BNRG_SPI_IRQ_ALTERNATE;
	HAL_GPIO_Init(BNRG_SPI_IRQ_PORT, &GPIO_InitStruct);

	SpiHandle.Instance = BNRG_SPI_INSTANCE;
	SpiHandle.Init.Mode = BNRG_SPI_MODE;
	SpiHandle.Init.Direction = BNRG_SPI_DIRECTION;
	SpiHandle.Init.DataSize = BNRG_SPI_DATASIZE;
	SpiHandle.Init.CLKPolarity = BNRG_SPI_CLKPOLARITY;
	SpiHandle.Init.CLKPhase = BNRG_SPI_CLKPHASE;
	SpiHandle.Init.NSS = BNRG_SPI_NSS;
	SpiHandle.Init.FirstBit = BNRG_SPI_FIRSTBIT;
	SpiHandle.Init.TIMode = BNRG_SPI_TIMODE;
	SpiHandle.Init.CRCPolynomial = BNRG_SPI_CRCPOLYNOMIAL;

	SpiHandle.Init.BaudRatePrescaler = BNRG_SPI_BAUDRATEPRESCALER;

	HAL_SPI_Init(&SpiHandle);

	if (xSpiMode == SPI_MODE_EXTI) {
		/* Configure the NVIC for SPI */
		HAL_NVIC_SetPriority(BNRG_SPI_EXTI_IRQn, 3, 0);
		HAL_NVIC_EnableIRQ(BNRG_SPI_EXTI_IRQn);
	} else if (xSpiMode == SPI_MODE_DMA) {
		/* Enable DMA clock */
		__HAL_RCC_DMA1_CLK_ENABLE()
		;

		/*##-3- Configure the DMA ##################################################*/
		/* Configure the DMA handler for Transmission process */
		hdma_tx.Instance = DMA1_Channel3;
		hdma_tx.Init.Direction = DMA_MEMORY_TO_PERIPH;
		hdma_tx.Init.PeriphInc = DMA_PINC_DISABLE;
		hdma_tx.Init.MemInc = DMA_MINC_ENABLE;
		hdma_tx.Init.PeriphDataAlignment = DMA_PDATAALIGN_BYTE;
		hdma_tx.Init.MemDataAlignment = DMA_MDATAALIGN_BYTE;
		hdma_tx.Init.Mode = DMA_NORMAL;
		hdma_tx.Init.Priority = DMA_PRIORITY_LOW;

		HAL_DMA_Init(&hdma_tx);

		/* Associate the initialized DMA handle to the the SPI handle */
		__HAL_LINKDMA(&SpiHandle, hdmatx, hdma_tx);

		/* Configure the DMA handler for Reception process */
		hdma_rx.Instance = DMA1_Channel2;

		hdma_rx.Init.Direction = DMA_PERIPH_TO_MEMORY;
		hdma_rx.Init.PeriphInc = DMA_PINC_DISABLE;
		hdma_rx.Init.MemInc = DMA_MINC_ENABLE;
		hdma_rx.Init.PeriphDataAlignment = DMA_PDATAALIGN_BYTE;
		hdma_rx.Init.MemDataAlignment = DMA_MDATAALIGN_BYTE;
		hdma_rx.Init.Mode = DMA_NORMAL;
		hdma_rx.Init.Priority = DMA_PRIORITY_HIGH;

		HAL_DMA_Init(&hdma_rx);

		/* Associate the initialized DMA handle to the the SPI handle */
		__HAL_LINKDMA(&SpiHandle, hdmarx, hdma_rx);

		/*##-4- Configure the NVIC for DMA #########################################*/
		/* NVIC configuration for DMA transfer complete interrupt (SPI3_TX) */
		HAL_NVIC_SetPriority(DMA1_Channel3_IRQn, 1, 1);
		HAL_NVIC_EnableIRQ(DMA1_Channel3_IRQn);

		/* NVIC configuration for DMA transfer complete interrupt (SPI3_RX) */
		HAL_NVIC_SetPriority(DMA1_Channel2_IRQn, 1, 0);
		HAL_NVIC_EnableIRQ(DMA1_Channel2_IRQn);

	}

	/* Added HAP to enable SPI since Optimized SPI Transmit, Receive and Transmit/Receive APIs are
	 used for BlueNRG, BlueNRG-MS SPI communication in order to get the best performance in terms of
	 BLE throughput */
	__HAL_SPI_ENABLE(&SpiHandle);

	return (0);
}

int16_t BlueNRG_SPI_Write(uint8_t* data1, uint8_t* data2, uint16_t Nb_bytes1, uint16_t Nb_bytes2) {
	int16_t result = 0;
	uint16_t tx_bytes;
	uint16_t rx_bytes;
	struct timer t;

	const uint8_t header_master[5] = { 0x0a, 0x00, 0x00, 0x00, 0x00 };
	uint8_t header_slave[5] = { 0x00 };

	Timer_Set(&t, CLOCK_SECOND / 10);

	HAL_GPIO_WritePin(BNRG_SPI_CS_PORT, BNRG_SPI_CS_PIN, GPIO_PIN_RESET);

	while (SdkEvalSPI_Irq_Pin() == GPIO_PIN_RESET) {
		if (Timer_Expired(&t)) {
			result = -2;
			goto failed;
		}
	}

	HAL_SPI_TransmitReceive_Opt(&SpiHandle, header_master, header_slave, HEADER_SIZE);

	rx_bytes = (((uint16_t) header_slave[2]) << 8) | ((uint16_t) header_slave[1]);

	if (rx_bytes < Nb_bytes1) {
		result = -2;
		goto failed;
	}

	HAL_SPI_Transmit_Opt(&SpiHandle, data1, Nb_bytes1);

	rx_bytes -= Nb_bytes1;

	if (Nb_bytes2 > rx_bytes) {
		tx_bytes = rx_bytes;
	} else {
		tx_bytes = Nb_bytes2;
	}

	HAL_SPI_Transmit_Opt(&SpiHandle, data2, tx_bytes);

	result = tx_bytes;

	failed: HAL_GPIO_WritePin(BNRG_SPI_CS_PORT, BNRG_SPI_CS_PIN, GPIO_PIN_SET);

	return result;
}

void Hal_Write_Serial(const void* data1, const void* data2, uint16_t n_bytes1, uint16_t n_bytes2) {
	struct timer t;
	int ret;
	uint8_t data2_offset = 0;

	Timer_Set(&t, CLOCK_SECOND / 10);

	Disable_SPI_IRQ();

	while (1) {
		ret = BlueNRG_SPI_Write((uint8_t *) data1, (uint8_t *) data2 + data2_offset, n_bytes1, n_bytes2);

		if (ret >= 0) {
			n_bytes1 = 0;
			n_bytes2 -= ret;
			data2_offset += ret;
			if (n_bytes2 == 0)
				break;
		}

		if (Timer_Expired(&t)) {
			break;
		}
	}

	Enable_SPI_IRQ();
}
