==> htmicron/htlrbl32l/Applications/Projects/LoRaBase/LoRaBase_STSAFE/HTLRBL32L-SDK/Drivers/External_micro/BSP/STM32Lxx_BlueNRGLP/src/SDK_EVAL_Spi.c <==
#include "clock.h"
#include "osal.h"
#include "gp_timer.h"
#include <stdio.h>
#include "SDK_EVAL_Config.h"
#define HEADER_SIZE 5
#define WAIT_IRQ_LOW(func, timeout)                     \
{                                                       \
  clock_time = 0;                                       \
  LL_TIM_GenerateEvent_UPDATE(TIM2);                    \
  LL_TIM_EnableCounter(TIM2);                           \
    while( clock_time < timeout)                        \
        if(func == 0)                                   \
          break;                                        \
  LL_TIM_DisableCounter(TIM2);                          \
}

void SdkEvalSpiInit(void)
{
  /* Enable the GPIO clocks */
  DTM_SPI_SCLK_CLK_ENABLE();
  DTM_SPI_MISO_CLK_ENABLE();
  DTM_SPI_MOSI_CLK_ENABLE();
  DTM_SPI_CS_CLK_ENABLE();
  DTM_SPI_IRQ_CLK_ENABLE();
  
  /* Configure SCK Pin connected to pin 31 of CN10 connector */
  LL_GPIO_SetPinMode(DTM_SPI_SCLK_PORT, DTM_SPI_SCLK_PIN, LL_GPIO_MODE_ALTERNATE);
  LL_GPIO_SetAFPin_0_7(DTM_SPI_SCLK_PORT, DTM_SPI_SCLK_PIN, LL_GPIO_AF_5);
  LL_GPIO_SetPinSpeed(DTM_SPI_SCLK_PORT, DTM_SPI_SCLK_PIN, LL_GPIO_SPEED_FREQ_HIGH);
  LL_GPIO_SetPinPull(DTM_SPI_SCLK_PORT, DTM_SPI_SCLK_PIN, LL_GPIO_PULL_DOWN);
  
  /* Configure MISO Pin connected to pin xx of CNxx connector */
  LL_GPIO_SetPinMode(DTM_SPI_MISO_PORT, DTM_SPI_MISO_PIN, LL_GPIO_MODE_ALTERNATE);
  LL_GPIO_SetAFPin_0_7(DTM_SPI_MISO_PORT, DTM_SPI_MISO_PIN, LL_GPIO_AF_5);
  LL_GPIO_SetPinSpeed(DTM_SPI_MISO_PORT, DTM_SPI_MISO_PIN, LL_GPIO_SPEED_FREQ_HIGH);
  LL_GPIO_SetPinPull(DTM_SPI_MISO_PORT, DTM_SPI_MISO_PIN, LL_GPIO_PULL_DOWN);
  
  /* Configure MOSI Pin connected to pin 29 of CN10 connector */
  LL_GPIO_SetPinMode(DTM_SPI_MOSI_PORT, DTM_SPI_MOSI_PIN, LL_GPIO_MODE_ALTERNATE);
  LL_GPIO_SetAFPin_0_7(DTM_SPI_MOSI_PORT, DTM_SPI_MOSI_PIN, LL_GPIO_AF_5);
  LL_GPIO_SetPinSpeed(DTM_SPI_MOSI_PORT, DTM_SPI_MOSI_PIN, LL_GPIO_SPEED_FREQ_HIGH);
  LL_GPIO_SetPinPull(DTM_SPI_MOSI_PORT, DTM_SPI_MOSI_PIN, LL_GPIO_PULL_DOWN);
  
  /* NSS/CSN/CS */
  LL_GPIO_SetPinMode(DTM_SPI_CS_PORT, DTM_SPI_CS_PIN, LL_GPIO_MODE_OUTPUT);
  LL_GPIO_SetOutputPin(DTM_SPI_CS_PORT, DTM_SPI_CS_PIN);
  
  /* IRQ -- INPUT */
  LL_GPIO_SetPinMode(DTM_SPI_IRQ_PORT, DTM_SPI_IRQ_PIN, LL_GPIO_MODE_INPUT);
  LL_GPIO_SetPinPull(DTM_SPI_IRQ_PORT, DTM_SPI_IRQ_PIN, LL_GPIO_PULL_DOWN); 
  
  LL_APB2_GRP1_EnableClock(LL_APB2_GRP1_PERIPH_SYSCFG);
  LL_SYSCFG_SetEXTISource(DTM_SPI_IRQ_SYSCFG_PORT, DTM_SPI_IRQ_SYSCFG_LINE);
  
  DTM_SPI_IRQ_EXTI_LINE_ENABLE();
  DTM_SPI_IRQ_EXTI_TRIG_ENABLE();
  
  NVIC_EnableIRQ(DTM_SPI_EXTI_IRQn); 
  NVIC_SetPriority(DTM_SPI_EXTI_IRQn, 4);
  
  /* SPI initialization */  
  DTM_SPI_CLK_ENABLE();
  
  /* Configure SPI1 communication */
  LL_SPI_SetBaudRatePrescaler(DTM_SPI_INSTANCE, DTM_SPI_BAUDRATEPRESCALER);
  LL_SPI_SetTransferDirection(DTM_SPI_INSTANCE, LL_SPI_FULL_DUPLEX);
  LL_SPI_SetClockPhase(DTM_SPI_INSTANCE, DTM_SPI_CLKPHASE);
  LL_SPI_SetClockPolarity(DTM_SPI_INSTANCE, DTM_SPI_CLKPOLARITY);
  LL_SPI_SetTransferBitOrder(DTM_SPI_INSTANCE, DTM_SPI_FIRSTBIT);
  LL_SPI_SetDataWidth(DTM_SPI_INSTANCE, DTM_SPI_DATASIZE);
  LL_SPI_SetNSSMode(DTM_SPI_INSTANCE, LL_SPI_NSS_SOFT);
  LL_SPI_SetMode(DTM_SPI_INSTANCE, LL_SPI_MODE_MASTER);
#ifdef STM32L476xx
  LL_SPI_SetRxFIFOThreshold(SPI1, LL_SPI_RX_FIFO_TH_QUARTER);
#endif
  /* Enable SPI1 */
  LL_SPI_Enable(DTM_SPI_INSTANCE);
  
  Configure_TIMTimeBase();
}

uint8_t BlueNRG_SPI_Write(uint8_t* data, uint16_t Nb_bytes)
{  
  uint16_t rx_bytes;
  struct timer t;
  
#ifndef DMA_16
  const uint8_t header_master[5] = {0x0A, 0x00, 0x00, 0x00, 0x00};
  uint8_t header_slave[5]  = {0x00};
#else
  uint8_t tmp_swap = 0, tmp_even = 0;
  uint8_t header_master[6] = {0x00, 0x0A, 0x00, 0x00, 0x00, 0x00};
  header_master[4] = data[0];
  uint8_t header_slave[6]  = {0x00,};
#endif
  
  Disable_IRQ();
  
  Timer_Set(&t, CLOCK_SECOND/10);
  
  LL_GPIO_ResetOutputPin(DTM_SPI_CS_PORT, DTM_SPI_CS_PIN);
  
  while(LL_GPIO_IsInputPinSet(DTM_SPI_IRQ_PORT, DTM_SPI_IRQ_PIN) != 1) {
    if(Timer_Expired(&t)){
      LL_GPIO_SetOutputPin(DTM_SPI_CS_PORT, DTM_SPI_CS_PIN);
      Enable_IRQ();
      return 1;
    }
  }
  
#ifndef DMA_16
  for (uint8_t i = 0; i < HEADER_SIZE; i++) {
#else
  for (uint8_t i = 0; i < (HEADER_SIZE+1); i++) {
#endif
    while(LL_SPI_IsActiveFlag_TXE(DTM_SPI_INSTANCE) == RESET);
    LL_SPI_TransmitData8(DTM_SPI_INSTANCE, header_master[i]);
    while(LL_SPI_IsActiveFlag_RXNE(DTM_SPI_INSTANCE) == RESET);
    header_slave[i] = LL_SPI_ReceiveData8(DTM_SPI_INSTANCE);
  }
  
#ifndef DMA_16
  rx_bytes = (((uint16_t)header_slave[2])<<8) | ((uint16_t)header_slave[1]);
#else
  rx_bytes = (((uint16_t)header_slave[3])<<8) | ((uint16_t)header_slave[0]);
#endif
  
  if((Nb_bytes-1) > rx_bytes){
    LL_GPIO_SetOutputPin(DTM_SPI_CS_PORT, DTM_SPI_CS_PIN);
    Enable_IRQ();
    return 1;
  }
#ifdef DMA_16
  if( (Nb_bytes-1) & 1)
    tmp_even = 1;
  else
    tmp_even = 0;
  
  for(uint16_t i=1;i<(Nb_bytes-1+tmp_even);i++) {
    tmp_swap = data[i+1];
    data[i+1] = data[i];
    data[i] = tmp_swap;
    i++;
  }
#endif

#ifndef DMA_16
  for (uint16_t i = 0; i < Nb_bytes; i++) {
#else
  for (uint16_t i = 0; i < (Nb_bytes-1+tmp_even); i++) {
#endif
    while(LL_SPI_IsActiveFlag_TXE(DTM_SPI_INSTANCE) == RESET);
#ifndef DMA_16
    LL_SPI_TransmitData8(DTM_SPI_INSTANCE, data[i]);
#else
    LL_SPI_TransmitData8(DTM_SPI_INSTANCE, data[i+1]); 
#endif
    while(LL_SPI_IsActiveFlag_RXNE(DTM_SPI_INSTANCE) == RESET);
    LL_SPI_ReceiveData8(DTM_SPI_INSTANCE);
  }
  
  /* To be aligned to the SPI protocol. Can bring to a delay inside the frame, due to the BlueNRG-1 that needs to check if the header is received or not */
  for(volatile int a =0; a<0xF;a++);
  WAIT_IRQ_LOW(LL_GPIO_IsInputPinSet(DTM_SPI_IRQ_PORT, DTM_SPI_IRQ_PIN), 10);

  Enable_IRQ();
  
  LL_GPIO_SetOutputPin(DTM_SPI_CS_PORT, DTM_SPI_CS_PIN);
  
  return 0;
}


void Hal_Write_Serial(const void* data1, const void* data2, uint16_t n_bytes1, uint16_t n_bytes2)
{
  Osal_MemCpy(sdk_buffer, data1, n_bytes1);
  Osal_MemCpy(&sdk_buffer[n_bytes1], data2, n_bytes2);
  n_bytes1 += n_bytes2;
  
  BlueNRG_SPI_Write(sdk_buffer, n_bytes1);
}




/**
* @}
*/


/**
* @}
*/


/**
* @}
*/



/******************* (C) COPYRIGHT 2014 STMicroelectronics *****END OF FILE****/
